--- a/config/locales/views/ja.yml
+++ b/config/locales/views/ja.yml
@@ -9,11 +9,15 @@ ja:
       user:
         name: 名前
         email: メールアドレス
-        department: 部署
+        department: 所属
         password: パスワード
         password_confirmation: パスワード確認
         basic_time: 指定勤務時間
         work_time: 基本勤務時間
+        employee_number: 社員番号
+        uid: カードID
+        designated_work_start_time: 指定勤務開始時間
+        designated_work_end_time: 指定勤務終了時間
         
   sessions:
     new:
